--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,3 @@
 {
-  "presets": ["@babel/preset-env", "ts-jest"]
+  "presets": ["@babel/preset-env", "ts-jest", "@babel/preset-typescript", "@babel/preset-react"]
 }
